compiler/testData/diagnostics/tests/recovery/emptyTypeArgs.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun main(args: Array<String>) {
    args is Array<<!SYNTAX!><!>>
}